fixed horizontal scroll issue for Mojave

--- a/ElectronMainApp/src/main/ui/css/style.css
+++ b/ElectronMainApp/src/main/ui/css/style.css
@@ -1,4 +1,8 @@
 /* Generated by less 2.5.1 */
+body {
+  overflow-y: auto;
+  overflow-x: hidden;
+}
 #preloaderContainer {
   position: absolute;
   left: 50%;
@@ -1522,10 +1526,6 @@ li.active .toggler:before {
 
 .about-btn--hidden {
   display: none;
-}
-
-body {
-  overflow: auto;
 }
 
 .onboarding {
